# open-tool

./: .gitignore  README.md
compile/cmake/001_HelloWorld/: CMakeLists.txt
compile/cmake/001_hello_cmake/: CMakeLists.txt  main.c
compile/cmake/002_cmakeSample/: CMakeLists.txt
compile/cmake/002_cmakeSample/include/: common.h
compile/cmake/002_cmakeSample/src/: main.cpp
compile/cmake/002_cmakeSample/src/C/: fun_c_1.c
compile/cmake/002_cmakeSample/src/CXX/: fun_cxx_1.cpp
compile/cmake/002_cmake_base/: CMakeLists.txt
compile/cmake/002_cmake_base/src/: main.cpp
compile/cmake/002_cmake_base/src/C/: fun_c_1.c
compile/cmake/002_cmake_base/src/CXX/: fun_cxx_2.cpp
compile/cmake/003_LibrariesMake/: CMakeLists.txt
compile/cmake/003_LibrariesMake/src/C/: fun_c_2.c
compile/cmake/003_LibrariesMake/src/CXX/: fun_cxx_2.cpp
compile/cmake/003_add_library/: CMakeLists.txt
compile/cmake/003_add_library/src/C/: fun_c_1.c  fun_c_2.c
compile/cmake/003_add_library/src/CXX/: fun_cxx_1.cpp  fun_cxx_2.cpp
compile/cmake/004_LibrariesLink/: CMakeLists.txt
compile/cmake/004_LibrariesLink/src/: main.cpp
compile/cmake/004_link_libraries/: CMakeLists.txt
compile/cmake/004_link_libraries/src/: main.cpp
compile/cmake/005_CMAKE_AR/: CMakeLists.txt
compile/cmake/005_CMAKE_AR/src/: test.cpp
compile/cmake/005_CMAKE_AR/test/: main.cpp
gcov/: Makefile
gcov/doc/: Gcov记录文档.docx
gcov/src/: main.c
memory/jemalloc/example/: Makefile
memory/jemalloc/example/doc/: Jemalloc记录文档.docx
memory/jemalloc/example/include/: common.h
memory/jemalloc/example/lib/x86/: libjemalloc.7z
memory/jemalloc/example/material/: report_10.txt  report_221.txt  x86.1301311.10.i10.dot  x86.1301311.10.i10.heap  x86.1301311.10.i10.html  x86.1301311.221.i221.dot  x86.1301311.221.i221.heap  x86.1301311.221.i221.html
memory/jemalloc/example/src/: common.c
memory/jemalloc/example/src/exit/: main.c
memory/jemalloc/example/src/not_exit/: main.c
memory/jemalloc/je_anlys/script/config/: je_config.cfg
memory/jemalloc/je_anlys/script/python/: heapResMerge.py
memory/jemalloc/je_anlys/script/shell/: info.sh  je_anlys.sh
memory/jemalloc/script/config/: je_config.cfg
memory/jemalloc/script/python/: heap_result_merge.py  info.py  je_analyse.py
unit_test/GoogleTest/: Makefile
unit_test/GoogleTest/001_assertion/include/: sample.h
unit_test/GoogleTest/001_assertion/src/: sample.cpp  sample_unittest.cpp
unit_test/GoogleTest/002_advanced/: make.sh
unit_test/GoogleTest/002_advanced/include/: sample.h
unit_test/GoogleTest/002_advanced/src/: sample.cpp  sample_unittest.cpp
unit_test/GoogleTest/doc/: GoogleTest记录文档.docx
video/ffmpeg/: CMakeLists.txt  Makefile
video/ffmpeg/build_plat/: hi3519dv500.mk  x86.mk
video/ffmpeg/build_plat/common/: include.mk  option.mk
video/ffmpeg/cmake/: CMakeLists.txt  external_option.cmake  internal_option.cmake  pollux.pc.in
video/ffmpeg/include/: pollux_decode.h  pollux_erron.h  pollux_fmt.h
video/ffmpeg/include/internal/: pollux_internal_decode.h  pollux_internal_ffmpeg.h  pollux_internal_fmt.h  pollux_internal_thread.h
video/ffmpeg/include/pollux/: pollux_decode.h  pollux_erron.h
video/ffmpeg/include/pollux/internal/: pollux_internal_decode.h
video/ffmpeg/include/sirius/: sirius_common.h  sirius_macro.h
video/ffmpeg/src/: pollux_decode.c
video/ffmpeg/src/internal/: pollux_internal_ffmpeg.c  pollux_internal_fmt.c
video/ffmpeg/unittests/: .gitignore  CMakeLists.txt  Makefile
video/ffmpeg/unittests/cmake/: external_option.cmake
video/ffmpeg/unittests/src/: test.c  test1.cpp  test2.c
